services.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-app
  namespace: warehouse-app
spec:
  selector:
    app: warehouse-app
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: currencies-service
  namespace: warehouse-app
spec:
  selector:
    app: currencies-service
  ports:
    - port: 8090
      targetPort: 8090
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: warehouse-app
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: warehouse-app
spec:
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: warehouse-app
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: zeebe
  namespace: warehouse-app
spec:
  selector:
    app: zeebe
  ports:
    - name: gateway
      port: 26500
      targetPort: 26500
    - name: monitoring
      port: 9600
      targetPort: 9600
  type: ClusterIP
