ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warehouse-ingress
  namespace: warehouse-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: warehouse.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: warehouse-app
                port:
                  number: 8080
